
	* slint.c: The handling of user interrupts has been moved to ...
	* tty.c: ... this newly created file, which contains a simple,
	not yet complete interface to the terminal library. It should be
	used instead of depending directly on ncurses or SLang features.
	* tty.h: Added the new function prototypes from tty.c and some
	legacy definitions.
	* view.c: Converted to use the new tty functions.

2005-08-28  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_hexedit_save_changes): Added an assertion that
	view->filename be not NULL.
	* view.c (view_toggle_magic_mode): Check if filename != NULL
	before dereferencing the pointer.
	* view.c (view_change_nroff_mode_cmd): Renamed to
	view_toggle_nroff_mode_cmd.
	* view.c (view_new): Separated the mode toggling functions from
	updating the display. The non-updating functions are called on
	initialization.

2005-08-27  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* view.c (view_normal_search_cmd): Initialize exp to avoid
	freeing of uninitialized pointer on cancel.

2005-08-25  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c (xmouse_get_event): Disable double-click tracking for
	mouse wheel events.

2005-08-22  Roland Illig  <roland.illig@gmx.de>

	* view.c (struct WView): Renamed dpy_topleft to dpy_start, as it
	does not always represent the top-left corner of the screen.
	Replaced dpy_complete with dpy_end, the offset of the first byte
	after the displayed region.
	* view.c (view_display_status): In normal display mode (that is:
	not search progress), calculate the percentage based on dpy_end
	instead of dpy_start. This avoids a sudden break to 100 % when
	approaching the end of file.
	* view.c (view_moveto_top): Simplified the code.

2005-08-21  Roland Illig  <roland.illig@gmx.de>

	* view.h: Rewrote it. All functions are preceded by a describing
	comment and the "extern" keyword.
	* fileloc.h: Newly added this file, which provides a place where
	all names of user specific configuration files are listed.